--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-08 11:23:58.186501\n"
+      "Last run:  2020-10-08 12:02:11.050108\n"
      ]
     }
    ],
@@ -870,13 +870,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if we get LilljegrenJ Wikidata has a big delay right now see \n",
+    "Check if we get LilljegrenJ from Wikidata as Wikidata has a big delay right now 2020-10-08 see \n",
     "[Grafana Lag](https://grafana.wikimedia.org/d/000000489/wikidata-query-service?orgId=1&refresh=1m)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,94 +2047,94 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>authorid</th>\n",
-       "      <th>Littbank</th>\n",
        "      <th>WikidataID</th>\n",
+       "      <th>Littbank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
        "      <td>BirchPfeifferC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
        "      <td>Q68117</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>BjerkenCG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
        "      <td>Q100151904</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>207</th>\n",
        "      <td>BjörkmanE</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
        "      <td>Q11859217</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
        "      <td>BrandstromKA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
        "      <td>Q100153203</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
        "      <td>ButenschönA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
        "      <td>Q14932468</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>387</th>\n",
        "      <td>DahlenT</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
        "      <td>Q99771903</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
        "      <td>FjortoftK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
        "      <td>Q99871759</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
        "      <td>ForsasScottH</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
        "      <td>Q99872638</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>759</th>\n",
        "      <td>HornströmM</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
        "      <td>Q99751230</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
        "      <td>RomanusAlfvénAC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
        "      <td>Q16946439</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1411</th>\n",
        "      <td>SjödinS</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
        "      <td>Q3527629</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1549</th>\n",
        "      <td>TirénG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
        "      <td>Q4458078</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1597</th>\n",
        "      <td>WahlinK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
        "      <td>Q1708942</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1697</th>\n",
        "      <td>ÅströmP</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
        "      <td>Q2063496</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -3204,8 +3204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-08 11:24:04.135723\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:05.949524\n"
+      "Ended:  2020-10-08 12:02:17.944000\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:06.894328\n"
      ]
     }
    ],
