--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -17,15 +17,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last run:  2020-10-07 12:50:31.055889\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "start_time = datetime.now()\n",
@@ -380,6 +372,15 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dftot.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -429,12 +430,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EWS Vrandečić"
+    "## EWS Vrandečić  \n",
+    "* [tweet](https://twitter.com/vrandezo/status/1313587353433251840?s=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +478,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +498,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,13 +570,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 949 entries, 0 to 948\n",
+      "RangeIndex: 952 entries, 0 to 951\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   item       949 non-null    object\n",
-      " 1   itemLabel  949 non-null    object\n",
-      " 2   NobelAPI   949 non-null    object\n",
+      " 0   item       952 non-null    object\n",
+      " 1   itemLabel  952 non-null    object\n",
+      " 2   NobelAPI   952 non-null    object\n",
       "dtypes: object(3)\n",
       "memory usage: 22.4+ KB\n"
      ]
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -630,146 +632,146 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q35149</td>\n",
-       "      <td>Wilhelm Röntgen</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Wilhelm Conrad Röntgen</td>\n",
-       "      <td>Wilhelm Conrad Röntgen</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/1</td>\n",
+       "      <th>942</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1635006</td>\n",
+       "      <td>Michael Kremer</td>\n",
+       "      <td>984</td>\n",
+       "      <td>984</td>\n",
+       "      <td>Michael Kremer</td>\n",
+       "      <td>Michael Kremer</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>male</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q41688</td>\n",
-       "      <td>Hendrik Lorentz</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hendrik A. Lorentz</td>\n",
-       "      <td>Hendrik A. Lorentz</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/2</td>\n",
+       "      <th>943</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q5677307</td>\n",
+       "      <td>Harvey J. Alter</td>\n",
+       "      <td>985</td>\n",
+       "      <td>985</td>\n",
+       "      <td>Harvey J. Alter</td>\n",
+       "      <td>Harvey J. Alter</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>male</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q79000</td>\n",
-       "      <td>Pieter Zeeman</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Pieter Zeeman</td>\n",
-       "      <td>Pieter Zeeman</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/3</td>\n",
+       "      <th>944</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1927895</td>\n",
+       "      <td>Michael Houghton</td>\n",
+       "      <td>986</td>\n",
+       "      <td>986</td>\n",
+       "      <td>Michael Houghton</td>\n",
+       "      <td>Michael Houghton</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>male</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q41269</td>\n",
-       "      <td>Henri Becquerel</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Henri Becquerel</td>\n",
-       "      <td>Henri Becquerel</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/4</td>\n",
+       "      <th>945</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q22669757</td>\n",
+       "      <td>Charles M. Rice</td>\n",
+       "      <td>987</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Charles M. Rice</td>\n",
+       "      <td>Charles M. Rice</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>male</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q37463</td>\n",
-       "      <td>Pierre Curie</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Pierre Curie</td>\n",
-       "      <td>Pierre Curie</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/5</td>\n",
+       "      <th>946</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q193803</td>\n",
+       "      <td>Roger Penrose</td>\n",
+       "      <td>988</td>\n",
+       "      <td>988</td>\n",
+       "      <td>Roger Penrose</td>\n",
+       "      <td>Roger Penrose</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>male</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q7186</td>\n",
-       "      <td>Marie Curie</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Marie Curie</td>\n",
-       "      <td>Marie Curie</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/6</td>\n",
+       "      <th>947</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q65807</td>\n",
+       "      <td>Reinhard Genzel</td>\n",
+       "      <td>989</td>\n",
+       "      <td>989</td>\n",
+       "      <td>Reinhard Genzel</td>\n",
+       "      <td>Reinhard Genzel</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
+       "      <td>male</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>948</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q493956</td>\n",
+       "      <td>Andrea M. Ghez</td>\n",
+       "      <td>990</td>\n",
+       "      <td>990</td>\n",
+       "      <td>Andrea Ghez</td>\n",
+       "      <td>Andrea Ghez</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
        "      <td>female</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q83297</td>\n",
-       "      <td>John William Strutt, 3rd Baron Rayleigh</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Lord Rayleigh</td>\n",
-       "      <td>Lord Rayleigh</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/8</td>\n",
-       "      <td>male</td>\n",
+       "      <th>949</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q17280087</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>991</td>\n",
+       "      <td>991</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
+       "      <td>female</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q57063</td>\n",
-       "      <td>Philipp Lenard</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Philipp Lenard</td>\n",
-       "      <td>Philipp Lenard</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/9</td>\n",
-       "      <td>male</td>\n",
+       "      <th>950</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q56068</td>\n",
+       "      <td>Jennifer Doudna</td>\n",
+       "      <td>992</td>\n",
+       "      <td>992</td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
+       "      <td>female</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q47285</td>\n",
-       "      <td>J. J. Thomson</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>J.J. Thomson</td>\n",
-       "      <td>J.J. Thomson</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/10</td>\n",
-       "      <td>male</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q127234</td>\n",
-       "      <td>Albert A. Michelson</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Albert A. Michelson</td>\n",
-       "      <td>Albert A. Michelson</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/11</td>\n",
-       "      <td>male</td>\n",
-       "      <td>both</td>\n",
+       "      <th>951</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2344210</td>\n",
+       "      <td>Louise Glück</td>\n",
+       "      <td>993</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WD_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     item  ... WD_Nobel\n",
-       "0   http://www.wikidata.org/entity/Q35149  ...     both\n",
-       "1   http://www.wikidata.org/entity/Q41688  ...     both\n",
-       "2   http://www.wikidata.org/entity/Q79000  ...     both\n",
-       "3   http://www.wikidata.org/entity/Q41269  ...     both\n",
-       "4   http://www.wikidata.org/entity/Q37463  ...     both\n",
-       "5    http://www.wikidata.org/entity/Q7186  ...     both\n",
-       "6   http://www.wikidata.org/entity/Q83297  ...     both\n",
-       "7   http://www.wikidata.org/entity/Q57063  ...     both\n",
-       "8   http://www.wikidata.org/entity/Q47285  ...     both\n",
-       "9  http://www.wikidata.org/entity/Q127234  ...     both\n",
+       "                                         item  ... WD_Nobel\n",
+       "942   http://www.wikidata.org/entity/Q1635006  ...     both\n",
+       "943   http://www.wikidata.org/entity/Q5677307  ...     both\n",
+       "944   http://www.wikidata.org/entity/Q1927895  ...     both\n",
+       "945  http://www.wikidata.org/entity/Q22669757  ...     both\n",
+       "946    http://www.wikidata.org/entity/Q193803  ...     both\n",
+       "947     http://www.wikidata.org/entity/Q65807  ...     both\n",
+       "948    http://www.wikidata.org/entity/Q493956  ...     both\n",
+       "949  http://www.wikidata.org/entity/Q17280087  ...     both\n",
+       "950     http://www.wikidata.org/entity/Q56068  ...     both\n",
+       "951   http://www.wikidata.org/entity/Q2344210  ...  WD_only\n",
        "\n",
        "[10 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,23 +780,23 @@
     "dfmerge = pd.merge(WDNobel, NobelTot,how='outer', left_on=\"NobelAPI\",right_on=\"id\",indicator=True)\n",
     "dfmerge['_merge'] = dfmerge['_merge'].str.replace('left_only','WD_only').str.replace('right_only','Nobel_only')\n",
     "dfmerge.rename(columns={\"_merge\": \"WD_Nobel\"},inplace = True)    \n",
-    "dfmerge[0:10]  "
+    "dfmerge[-10:]  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          949\n",
-       "Nobel_only      2\n",
+       "both       951\n",
+       "WD_only      1\n",
        "Name: WD_Nobel, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -829,34 +831,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>949</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>991</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/991</td>\n",
-       "      <td>female</td>\n",
-       "      <td>Nobel_only</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>link</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>950</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>992</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate/992</td>\n",
-       "      <td>female</td>\n",
-       "      <td>Nobel_only</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>link</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>"
       ],
@@ -864,7 +838,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,14 +855,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-07 12:51:24.123840\n"
+      "End run:  2020-10-08 13:05:40.215406\n"
      ]
     }
    ],
@@ -898,20 +872,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:53.075015\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.507851\n"
      ]
     }
    ],
    "source": [
     "print('Time elapsed (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
