--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -5,13 +5,15 @@
    "metadata": {},
    "source": [
     "# Litteraturbanken Author \n",
-    "version 1.15 \n",
+    "version 1.16 \n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
     "  * good API documention has not been found\n",
     "  * GITHUB [spraakbanken/littb-frontend](https://github.com/spraakbanken/littb-frontend)\n",
-    "      Open question how to see [JSON for a record 23](https://github.com/spraakbanken/littb-frontend/issues/23)\n",
+    "      * Open question \n",
+    "        * how to see [JSON for a record 23](https://github.com/spraakbanken/littb-frontend/issues/23)\n",
+    "        * [feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)\n",
     "  * API [get_authors](https://litteraturbanken.se/api/get_authors)\n",
     "  * [url_list](https://litteraturbanken.se/api/url_list)\n",
     "  * [API List all 0-10 include](https://litteraturbanken.se/api/list_all/etext,faksimil,pdf?from=0&to=10&include=authors,forfattare,lbworkid,titlepath,title,librisid,mediatype,main_author.author_id)\n",
@@ -89,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-08 12:02:11.050108\n"
+      "Last run:  2020-10-08 13:34:08.813926\n"
      ]
     }
    ],
@@ -1970,8 +1972,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>show_y</th>\n",
-       "      <th>authorid_x</th>\n",
        "      <th>authorid_y</th>\n",
+       "      <th>authorid_x</th>\n",
        "      <th>WikidataID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1979,36 +1981,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>True</td>\n",
-       "      <td>BjerkenCG</td>\n",
        "      <td>BjerkénCG</td>\n",
+       "      <td>BjerkenCG</td>\n",
        "      <td>Q100151904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>True</td>\n",
-       "      <td>BrandstromKA</td>\n",
        "      <td>BrändströmKA</td>\n",
+       "      <td>BrandstromKA</td>\n",
        "      <td>Q100153203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>True</td>\n",
-       "      <td>DahlenT</td>\n",
        "      <td>DahlénT</td>\n",
+       "      <td>DahlenT</td>\n",
        "      <td>Q99771903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>True</td>\n",
-       "      <td>FjortoftK</td>\n",
        "      <td>FjørtoftK</td>\n",
+       "      <td>FjortoftK</td>\n",
        "      <td>Q99871759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>True</td>\n",
-       "      <td>ForsasScottH</td>\n",
        "      <td>ForsåsScottH</td>\n",
+       "      <td>ForsasScottH</td>\n",
        "      <td>Q99872638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2016,12 +2018,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   show_y    authorid_x    authorid_y  WikidataID\n",
-       "0    True     BjerkenCG     BjerkénCG  Q100151904\n",
-       "1    True  BrandstromKA  BrändströmKA  Q100153203\n",
-       "2    True       DahlenT       DahlénT   Q99771903\n",
-       "3    True     FjortoftK     FjørtoftK   Q99871759\n",
-       "4    True  ForsasScottH  ForsåsScottH   Q99872638"
+       "   show_y    authorid_y    authorid_x  WikidataID\n",
+       "0    True     BjerkénCG     BjerkenCG  Q100151904\n",
+       "1    True  BrändströmKA  BrandstromKA  Q100153203\n",
+       "2    True       DahlénT       DahlenT   Q99771903\n",
+       "3    True     FjørtoftK     FjortoftK   Q99871759\n",
+       "4    True  ForsåsScottH  ForsasScottH   Q99872638"
       ]
      },
      "execution_count": 33,
@@ -2047,94 +2049,94 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>authorid</th>\n",
-       "      <th>WikidataID</th>\n",
        "      <th>Littbank</th>\n",
+       "      <th>WikidataID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
        "      <td>BirchPfeifferC</td>\n",
-       "      <td>Q68117</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
+       "      <td>Q68117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>BjerkenCG</td>\n",
-       "      <td>Q100151904</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
+       "      <td>Q100151904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>207</th>\n",
        "      <td>BjörkmanE</td>\n",
-       "      <td>Q11859217</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
+       "      <td>Q11859217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
        "      <td>BrandstromKA</td>\n",
-       "      <td>Q100153203</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
+       "      <td>Q100153203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
        "      <td>ButenschönA</td>\n",
-       "      <td>Q14932468</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
+       "      <td>Q14932468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>387</th>\n",
        "      <td>DahlenT</td>\n",
-       "      <td>Q99771903</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
+       "      <td>Q99771903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
        "      <td>FjortoftK</td>\n",
-       "      <td>Q99871759</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
+       "      <td>Q99871759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
        "      <td>ForsasScottH</td>\n",
-       "      <td>Q99872638</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
+       "      <td>Q99872638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>759</th>\n",
        "      <td>HornströmM</td>\n",
-       "      <td>Q99751230</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
+       "      <td>Q99751230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
        "      <td>RomanusAlfvénAC</td>\n",
-       "      <td>Q16946439</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
+       "      <td>Q16946439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1411</th>\n",
        "      <td>SjödinS</td>\n",
-       "      <td>Q3527629</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
+       "      <td>Q3527629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1549</th>\n",
        "      <td>TirénG</td>\n",
-       "      <td>Q4458078</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
+       "      <td>Q4458078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1597</th>\n",
        "      <td>WahlinK</td>\n",
-       "      <td>Q1708942</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
+       "      <td>Q1708942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1697</th>\n",
        "      <td>ÅströmP</td>\n",
-       "      <td>Q2063496</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
+       "      <td>Q2063496</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -2523,7 +2525,10 @@
     "* Show True borde det inte vara False?: Eugénie BerglindhU EngeströmL Rafael WestinF \n",
     "* Dublett: NordinCG / NordinC , ArfvidssonN / ArfwidssonN \n",
     "* [SimonsenM](https://litteraturbanken.se/f%C3%B6rfattare/SimonsenM) är lite udda med en se [Malan Marnersdóttir](https://litteraturbanken.se/f%C3%B6rfattare/Marnersd%C3%B3ttirM/titlar) \n",
-    "  * undran hur ser jag det i datat"
+    "  * undran hur ser jag det i datat\n",
+    "  \n",
+    "Skapar en task på GITHUB         \n",
+    "* [feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)\n"
    ]
   },
   {
@@ -3204,8 +3209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-08 12:02:17.944000\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:06.894328\n"
+      "Ended:  2020-10-08 13:34:14.984800\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:06.171422\n"
      ]
     }
    ],
