--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -51,19 +51,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 951 entries, 0 to 950\n",
+      "RangeIndex: 952 entries, 0 to 951\n",
       "Data columns (total 18 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   id               951 non-null    object\n",
-      " 1   knownName        927 non-null    object\n",
-      " 2   givenName        927 non-null    object\n",
-      " 3   familyName       925 non-null    object\n",
-      " 4   fullName         927 non-null    object\n",
-      " 5   gender           927 non-null    object\n",
-      " 6   birth            926 non-null    object\n",
-      " 7   links            951 non-null    object\n",
-      " 8   nobelPrizes      951 non-null    object\n",
+      " 0   id               952 non-null    object\n",
+      " 1   knownName        928 non-null    object\n",
+      " 2   givenName        928 non-null    object\n",
+      " 3   familyName       926 non-null    object\n",
+      " 4   fullName         928 non-null    object\n",
+      " 5   gender           928 non-null    object\n",
+      " 6   birth            927 non-null    object\n",
+      " 7   links            952 non-null    object\n",
+      " 8   nobelPrizes      952 non-null    object\n",
       " 9   death            628 non-null    object\n",
       " 10  orgName          24 non-null     object\n",
       " 11  nativeName       24 non-null     object\n",
@@ -74,7 +74,7 @@
       " 16  birthCountryNow  1 non-null      object\n",
       " 17  birthContinent   1 non-null      object\n",
       "dtypes: object(18)\n",
-      "memory usage: 133.9+ KB\n"
+      "memory usage: 134.0+ KB\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>941</th>\n",
+       "      <th>942</th>\n",
        "      <td>50</td>\n",
        "      <td>{'en': 'Wolfgang Pauli', 'se': 'Wolfgang Pauli'}</td>\n",
        "      <td>{'en': 'Wolfgang', 'se': 'Wolfgang'}</td>\n",
@@ -151,7 +151,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>942</th>\n",
+       "      <th>943</th>\n",
        "      <td>483</td>\n",
        "      <td>{'en': 'Woodrow Wilson', 'se': 'Woodrow Wilson'}</td>\n",
        "      <td>{'en': 'Woodrow', 'se': 'Woodrow'}</td>\n",
@@ -172,7 +172,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>943</th>\n",
+       "      <th>944</th>\n",
        "      <td>557</td>\n",
        "      <td>{'en': 'Yasser Arafat', 'se': 'Yasser Arafat'}</td>\n",
        "      <td>{'en': 'Yasser', 'se': 'Yasser'}</td>\n",
@@ -193,7 +193,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>944</th>\n",
+       "      <th>945</th>\n",
        "      <td>642</td>\n",
        "      <td>{'en': 'Yasunari Kawabata', 'se': 'Yasunari Ka...</td>\n",
        "      <td>{'en': 'Yasunari', 'se': 'Yasunari'}</td>\n",
@@ -214,7 +214,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>945</th>\n",
+       "      <th>946</th>\n",
        "      <td>559</td>\n",
        "      <td>{'en': 'Yitzhak Rabin', 'se': 'Yitzhak Rabin'}</td>\n",
        "      <td>{'en': 'Yitzhak', 'se': 'Yitzhak'}</td>\n",
@@ -235,7 +235,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>946</th>\n",
+       "      <th>947</th>\n",
        "      <td>826</td>\n",
        "      <td>{'en': 'Yoichiro Nambu', 'se': 'Yoichiro Nambu'}</td>\n",
        "      <td>{'en': 'Yoichiro', 'se': 'Yoichiro'}</td>\n",
@@ -256,7 +256,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>947</th>\n",
+       "      <th>948</th>\n",
        "      <td>927</td>\n",
        "      <td>{'en': 'Yoshinori Ohsumi', 'se': 'Yoshinori Oh...</td>\n",
        "      <td>{'en': 'Yoshinori', 'se': 'Yoshinori'}</td>\n",
@@ -277,7 +277,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>948</th>\n",
+       "      <th>949</th>\n",
        "      <td>265</td>\n",
        "      <td>{'en': 'Yuan T. Lee', 'se': 'Yuan T. Lee'}</td>\n",
        "      <td>{'en': 'Yuan T.', 'se': 'Yuan T.'}</td>\n",
@@ -298,7 +298,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>949</th>\n",
+       "      <th>950</th>\n",
        "      <td>794</td>\n",
        "      <td>{'en': 'Yves Chauvin', 'se': 'Yves Chauvin'}</td>\n",
        "      <td>{'en': 'Yves', 'se': 'Yves'}</td>\n",
@@ -319,7 +319,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>950</th>\n",
+       "      <th>951</th>\n",
        "      <td>726</td>\n",
        "      <td>{'en': 'Zhores Alferov', 'se': 'Zhores Alferov'}</td>\n",
        "      <td>{'en': 'Zhores', 'se': 'Zhores'}</td>\n",
@@ -345,16 +345,16 @@
       ],
       "text/plain": [
        "      id  ... birthContinent\n",
-       "941   50  ...            NaN\n",
-       "942  483  ...            NaN\n",
-       "943  557  ...            NaN\n",
-       "944  642  ...            NaN\n",
-       "945  559  ...            NaN\n",
-       "946  826  ...            NaN\n",
-       "947  927  ...            NaN\n",
-       "948  265  ...            NaN\n",
-       "949  794  ...            NaN\n",
-       "950  726  ...            NaN\n",
+       "942   50  ...            NaN\n",
+       "943  483  ...            NaN\n",
+       "944  557  ...            NaN\n",
+       "945  642  ...            NaN\n",
+       "946  559  ...            NaN\n",
+       "947  826  ...            NaN\n",
+       "948  927  ...            NaN\n",
+       "949  265  ...            NaN\n",
+       "950  794  ...            NaN\n",
+       "951  726  ...            NaN\n",
        "\n",
        "[10 rows x 18 columns]"
       ]
@@ -387,15 +387,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 951 entries, 0 to 950\n",
+      "RangeIndex: 952 entries, 0 to 951\n",
       "Data columns (total 5 columns):\n",
       " #   Column   Non-Null Count  Dtype \n",
       "---  ------   --------------  ----- \n",
-      " 0   id       951 non-null    object\n",
-      " 1   name_en  927 non-null    object\n",
-      " 2   name_se  927 non-null    object\n",
-      " 3   link     951 non-null    object\n",
-      " 4   gender   927 non-null    object\n",
+      " 0   id       952 non-null    object\n",
+      " 1   name_en  928 non-null    object\n",
+      " 2   name_se  928 non-null    object\n",
+      " 3   link     952 non-null    object\n",
+      " 4   gender   928 non-null    object\n",
       "dtypes: object(5)\n",
       "memory usage: 37.3+ KB\n"
      ]
@@ -744,12 +744,12 @@
        "      <td>http://www.wikidata.org/entity/Q2344210</td>\n",
        "      <td>Louise Glück</td>\n",
        "      <td>993</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WD_only</td>\n",
+       "      <td>993</td>\n",
+       "      <td>Louise Glück</td>\n",
+       "      <td>Louise Glück</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>both</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -766,7 +766,7 @@
        "948    http://www.wikidata.org/entity/Q493956  ...     both\n",
        "949  http://www.wikidata.org/entity/Q17280087  ...     both\n",
        "950     http://www.wikidata.org/entity/Q56068  ...     both\n",
-       "951   http://www.wikidata.org/entity/Q2344210  ...  WD_only\n",
+       "951   http://www.wikidata.org/entity/Q2344210  ...     both\n",
        "\n",
        "[10 rows x 9 columns]"
       ]
@@ -791,8 +791,7 @@
     {
      "data": {
       "text/plain": [
-       "both       951\n",
-       "WD_only      1\n",
+       "both    952\n",
        "Name: WD_Nobel, dtype: int64"
       ]
      },
@@ -859,15 +858,56 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "End run:  2020-10-08 13:05:40.215406\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>itemLabel</th>\n",
+       "      <th>NobelAPI</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>name_se</th>\n",
+       "      <th>link</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>WD_Nobel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [item, itemLabel, NobelAPI, id, name_en, name_se, link, gender, WD_Nobel]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"End run: \", datetime.now())"
+    "WDonly = dfmerge[dfmerge[\"WD_Nobel\"]==\"WD_only\"].copy() \n",
+    "WDonly"
    ]
   },
   {
@@ -879,7 +919,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:04.507851\n"
+      "End run:  2020-10-08 13:25:19.565534\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"End run: \", datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed (hh:mm:ss.ms) 0:01:02.304019\n"
      ]
     }
    ],
